Add routing & nav styles

--- a/src/components/Calls/CallsHeader/index.css
+++ b/src/components/Calls/CallsHeader/index.css
@@ -10,3 +10,11 @@
 [data-theme="dark"] .site-layout .site-layout-background {
   background: #141414;
 }
+
+.ant-picker-input > input {
+  color: rgba(0, 0, 0, 0.45);
+}
+
+.ant-btn-text {
+  color: rgba(0, 0, 0, 0.45);
+}
